--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -108,16 +108,18 @@
 						>
 					</div>
 					<div id="eventLog">
-						<div class="alert alert-info" role="alert">
-							Waiting for use of voicekit
+						<div class="alert alert-warning" role="alert">
+							Waiting for use of voicekit...
 						</div>
 					</div>
 				</div>
 				<div id="light_div" class="col card border-5">
 					<span class="title">Lights state</span><br />
 					<div id="light_container" class="overflow-auto">
-						<div class="alert alert-info" role="alert">Waiting for data...</div>
-						<div>
+						<div class="alert alert-warning" role="alert">
+							Waiting for data...
+						</div>
+						<!-- <div>
 							<img
 								style="
 									width: 20px;
@@ -186,7 +188,7 @@
 								alt="lightbulbon"
 							/>
 							<span>room_4</span>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -200,7 +202,9 @@
 					<div class="weather">
 						<div id="today">
 							<span>Today</span><br />
-							<div class="alert alert-info" role="alert">Waiting for data</div>
+							<div class="alert alert-warning" role="alert">
+								Waiting for data...
+							</div>
 
 							<!-- <img
 								style="width: 3em; height: 3em"
@@ -219,7 +223,9 @@
 
 						<div class="border-top border-3" id="tomorrow">
 							<span>Tomorrow</span><br />
-							<div class="alert alert-info" role="alert">Waiting for data</div>
+							<div class="alert alert-warning" role="alert">
+								Waiting for data...
+							</div>
 							<!-- <img
 								style="width: 1.7em; height: 1.7 em"
 								src="/img/weather/sun.svg"
@@ -243,7 +249,9 @@
 				<div id="sensors_state" class="card col border-5 overflow-auto">
 					<span class="title">Sensors state</span>
 					<div id="sensors_container">
-						<div class="alert alert-info" role="alert">Waiting for data...</div>
+						<div class="alert alert-warning" role="alert">
+							Waiting for data...
+						</div>
 					</div>
 				</div>
 			</div>
@@ -251,7 +259,9 @@
 				<div class="col">
 					<span class="title">Currently measured values</span>
 					<div id="measured_value_container">
-						<div class="alert alert-info" role="alert">Waiting for data...</div>
+						<div class="alert alert-warning" role="alert">
+							Waiting for data...
+						</div>
 						<!-- <div class="sensors row measured_value">
 							<span class="sensors room measured_value">room_1</span><br />
 							<div class="measured_values_item card border-2 col-auto">
