--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -1,8 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cz" lang="cz">
 	<head>
+		<title>IOT - voicehome</title>
+		<style type="text/css" media="screen">
+			@import "/css/style.css";
+		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Voice-enabled smart home modules</title>
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+		<meta name="DC.language" content="en" />
+		<meta name="DC.publisher" content="Josef ŠANDA" />
 
 		<!-- AwesomeFont -->
 		<link
@@ -34,7 +40,7 @@
 		/>
 
 		<!-- Styles -->
-		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		<!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
 
 		<!-- Scripts -->
 		<script type="text/javascript">
@@ -83,7 +89,7 @@
 				<ul class="navbar-nav ml-auto text-right">
 					<li class="">
 						<img
-							id="controllers_status"
+							id="controllers_state"
 							style="width: 40px; margin: 3px"
 							src=""
 							alt=""
