--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cz" lang="cz">
 	<head>
+		<title>IOT - voicehome</title>
+		<style type="text/css" media="screen">
+			@import "/css/style.css";
+		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-		<meta content="utf-8" http-equiv="encoding" />
-
-		<title>Voice-enabled smart home modules</title>
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+		<meta name="DC.language" content="en" />
+		<meta name="DC.publisher" content="Josef ŠANDA" />
 
 		<!-- Styles -->
-		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		<!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
 
 		<!-- AwesomeFont -->
 		<link
@@ -47,58 +50,56 @@
 	</head>
 
 	<body onload="onBodyLoad()">
-		<header>
-			<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-				<a class="navbar-brand" href="/index.html">IOT</a>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarNavDropdown"
-					aria-controls="navbarNavDropdown"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div
-					class="collapse navbar-collapse order-1 dual-collapse2"
-					id="navbarNavDropdown"
-				>
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item">
-							<a class="nav-link active" href="/index.html"
-								>Home
-								<!-- <span class="sr-only">(current)</span> -->
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/analytics.html">Analytics</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/modules.html">Modules</a>
-						</li>
-					</ul>
-				</div>
-				<div
-					class="collapse navbar-collapse order-2 dual-collapse2"
-					id="navbarNavDropdown"
-				>
-					<ul class="navbar-nav ml-auto text-right">
-						<li class="">
-							<img
-								id="controllers_state"
-								style="width: 40px; margin: 3px"
-								src=""
-								alt=""
-							/>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</header>
+		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+			<a class="navbar-brand" href="/index.html">IOT</a>
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div
+				class="collapse navbar-collapse order-1 dual-collapse2"
+				id="navbarNavDropdown"
+			>
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link active" href="/index.html"
+							>Home
+							<!-- <span class="sr-only">(current)</span> -->
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/analytics.html">Analytics</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/modules.html">Modules</a>
+					</li>
+				</ul>
+			</div>
+			<div
+				class="collapse navbar-collapse order-2 dual-collapse2"
+				id="navbarNavDropdown"
+			>
+				<ul class="navbar-nav ml-auto text-right">
+					<li class="">
+						<img
+							id="controllers_state"
+							style="width: 40px; margin: 3px"
+							src=""
+							alt=""
+						/>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-		<main class="container" role="main">
+		<div class="container" role="main">
 			<div class="row" id="row_1">
 				<div id="eventLogContainer" class="card border-5 col">
 					<div id="title">
@@ -255,8 +256,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="row border-5 card" id="row_3">
-				<div class="col">
+			<div class="row" id="row_3">
+				<div class="col border-5 card">
 					<span class="title">Currently measured values</span>
 					<div id="measured_value_container">
 						<div class="alert alert-warning" role="alert">
@@ -317,7 +318,7 @@
 					</div>
 				</div>
 			</div>
-		</main>
+		</div>
 
 		<!-- Bootstrap -->
 		<!-- jQuery and JS bundle w/ Popper.js -->
@@ -344,10 +345,7 @@
 			let ws;
 		</script>
 		<script src="js/script.js" type="text/javascript"></script>
-		<footer
-			style="position: fixed; bottom: 0; right: 0"
-			class="footer text-muted"
-		>
+		<footer class="footer text-muted">
 			<div>
 				Icons made by
 				<a href="https://www.flaticon.com/authors/good-ware" title="Good Ware"
