fix css for mobile devices

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -5,7 +5,7 @@
 		<style type="text/css" media="screen">
 			@import "/css/style.css";
 		</style>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, user-scalable=no" />
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<meta name="DC.language" content="en" />
 		<meta name="DC.publisher" content="Josef ŠANDA" />
@@ -101,7 +101,7 @@
 
 		<div class="container" role="main">
 			<div class="row" id="row_1">
-				<div id="eventLogContainer" class="card border-5 col">
+				<div id="eventLogContainer" class="card border-5 col-md">
 					<div id="title">
 						<span class="title">
 							<i style="float: left; margin-right: 5px" class="bi bi-mic"></i>
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="light_div" class="col card border-5">
+				<div id="light_div" class="col-md card border-5">
 					<span class="title">Lights state</span><br />
 					<div id="light_container" class="overflow-auto">
 						<div class="alert alert-warning" role="alert">
@@ -247,7 +247,7 @@
 					</div>
 				</div>
 
-				<div id="sensors_state" class="card col border-5 overflow-auto">
+				<div id="sensors_state" class="card col-md border-5 overflow-auto">
 					<span class="title">Sensors state</span>
 					<div id="sensors_container">
 						<div class="alert alert-warning" role="alert">
@@ -257,7 +257,7 @@
 				</div>
 			</div>
 			<div class="row" id="row_3">
-				<div class="col border-5 card">
+				<div class="col-md border-5 card">
 					<span class="title">Currently measured values</span>
 					<div id="measured_value_container">
 						<div class="alert alert-warning" role="alert">
