web - added sensors description for better user experience

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -347,11 +347,7 @@
 		<script src="js/script.js" type="text/javascript"></script>
 		<footer class="footer text-muted">
 			<div>
-				Icons made by
-				<a href="https://www.flaticon.com/authors/good-ware" title="Good Ware"
-					>Good Ware</a
-				>
-				from
+				Used icons are from
 				<a href="https://www.flaticon.com/" title="Flaticon"
 					>www.flaticon.com</a
 				>
