web - fix overflow for event log

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -101,7 +101,7 @@
 
 		<div class="container" role="main">
 			<div class="row" id="row_1">
-				<div id="eventLogContainer" class="card border-5 col-md">
+				<div id="eventLogContainer" class="card border-5 overflow-auto col-md">
 					<div id="title">
 						<span class="title">
 							<i style="float: left; margin-right: 5px" class="bi bi-mic"></i>
