translated reply + reply if calls not found + web - changed design event

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -101,14 +101,14 @@
 
 		<div class="container" role="main">
 			<div class="row" id="row_1">
-				<div id="eventLogContainer" class="card border-5 overflow-auto col-md">
+				<div id="eventLogContainer" class="card border-5 col-md">
 					<div id="title">
 						<span class="title">
 							<i style="float: left; margin-right: 5px" class="bi bi-mic"></i>
 							Current event log</span
 						>
 					</div>
-					<div id="eventLog">
+					<div id="eventLog" class="overflow-auto">
 						<div class="alert alert-warning" role="alert">
 							Waiting for use of voicekit...
 						</div>
