clean index.html

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -115,81 +115,11 @@
 					</div>
 				</div>
 				<div id="light_div" class="col-md card border-5">
-					<span class="title">Lights state</span><br />
+					<span class="title">Lights state</span>
 					<div id="light_container" class="overflow-auto">
 						<div class="alert alert-warning" role="alert">
 							Waiting for data...
 						</div>
-						<!-- <div>
-							<img
-								style="
-									width: 20px;
-									height: 40px;
-									display: inline-block;
-									text-align: center;
-									margin-bottom: 5px;
-								"
-								src="/img/light/lightbulboff.svg"
-								alt="lightbulboff"
-							/>
-							<span> room_1 </span>
-						</div>
-						<div>
-							<img
-								style="
-									width: 20px;
-									height: 40px;
-									display: inline-block;
-									text-align: center;
-									margin-bottom: 5px;
-								"
-								src="/img/light/lightbulbon.svg"
-								alt="lightbulbon"
-							/>
-							<span>room_2</span>
-						</div>
-						<div>
-							<img
-								style="
-									width: 20px;
-									height: 40px;
-									display: inline-block;
-									text-align: center;
-									margin-bottom: 5px;
-								"
-								src="/img/light/lightbulbon.svg"
-								alt="lightbulbon"
-							/>
-							<span>kitchen</span>
-						</div>
-						<div>
-							<img
-								style="
-									width: 20px;
-									height: 40px;
-									display: inline-block;
-									text-align: center;
-									margin-bottom: 5px;
-								"
-								src="/img/light/lightbulbon.svg"
-								alt="lightbulbon"
-							/>
-							<span>room_3</span>
-						</div>
-						<div>
-							<img
-								style="
-									width: 20px;
-									height: 40px;
-									display: inline-block;
-									text-align: center;
-									margin-bottom: 5px;
-								"
-								src="/img/light/lightbulbon.svg"
-								alt="lightbulbon"
-							/>
-							<span>room_4</span>
-						</div> -->
 					</div>
 				</div>
 			</div>
@@ -206,20 +136,6 @@
 							<div class="alert alert-warning" role="alert">
 								Waiting for data...
 							</div>
-
-							<!-- <img
-								style="width: 3em; height: 3em"
-								src="/img/weather/sun.svg"
-								alt="sun"
-							/>
-							<span>30°C</span><br />
-							<span>32°C/20°C</span>
-							<img
-								style="width: 2em; height: 2em; margin: 0; margin-left: 25px"
-								src="/img/weather/umbrella.svg"
-								alt="umbrella"
-							/>
-							<span style="margin: 0">20%</span><br /> -->
 						</div>
 
 						<div class="border-top border-3" id="tomorrow">
@@ -227,22 +143,6 @@
 							<div class="alert alert-warning" role="alert">
 								Waiting for data...
 							</div>
-							<!-- <img
-								style="width: 1.7em; height: 1.7 em"
-								src="/img/weather/sun.svg"
-								alt="sun"
-							/><span>32°C/20°C</span
-							><img
-								style="
-									width: 1.3em;
-									height: 1.3em;
-									margin: 0;
-									margin-left: 25px;
-								"
-								src="/img/weather/umbrella.svg"
-								alt="umbrella"
-							/>
-							<span style="margin: 0">20%</span><br />  -->
 						</div>
 					</div>
 				</div>
@@ -263,58 +163,6 @@
 						<div class="alert alert-warning" role="alert">
 							Waiting for data...
 						</div>
-						<!-- <div class="sensors row measured_value">
-							<span class="sensors room measured_value">room_1</span><br />
-							<div class="measured_values_item card border-2 col-auto">
-								<span class="card-title text-center title">bme280_1</span><br />
-								<div class="card-body sensors">
-									<span>32°C</span>
-									<img
-										class="sensors measured_value"
-										src="/img/quantity/temperature.svg"
-										alt="temperature"
-									/>
-								</div>
-							</div>
-							<div class="measured_values_item card border-2 col-auto">
-								<span class="card-title text-center title">bme280_1</span><br />
-								<div class="card-body sensors measured_value">
-									<span>980hPa</span>
-									<img
-										class="sensors measured_value"
-										src="/img/quantity/pressure.svg"
-										alt="pressure"
-									/>
-								</div>
-							</div>
-							<div class="measured_values_item card border-2 col-auto">
-								<span class="card-title text-center title">tsl2591_1</span
-								><br />
-								<div class="card-body sensors measured_value">
-									<span>20lx</span>
-									<img
-										class="sensors measured_value"
-										src="/img/quantity/illuminance.svg"
-										alt="illuminance"
-									/>
-								</div>
-							</div>
-						</div>
-						<div class="sensors row measured_value">
-							<span class="sensors room">room_2</span><br />
-							<div class="measured_values_item card border-2 col-auto">
-								<span class="card-title text-center title">ds18b20_1</span
-								><br />
-								<div class="card-body sensors measured_value">
-									<span>32°C</span>
-									<img
-										class="sensors measured_value"
-										src="/img/quantity/temperature.svg"
-										alt="temperature"
-									/>
-								</div>
-							</div>
-						</div> -->
 					</div>
 				</div>
 			</div>
