template modified - test.

--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>
-        Page title
+        Smartlights
     </title>
 
     <!-- Styles -->
@@ -14,7 +14,7 @@
     <script src="script.js" type="text/javascript"></script>
 </head>
 <body onload="onBodyLoad()">
-    <div id="unique_id">Simple webpage example</div>
+    <div id="unique_id">The smartlights project.</div>
     <div class="common_class"></div>
     <div class="common_class"></div>
 </body>
