--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -9,7 +9,12 @@
 
     <!-- Scripts -->
     <script type="text/javascript">
-        var global_variable
+        var mqtt_client
+        var mqtt_reconnect_timeout = 2000
+        var mqtt_broker = "147.228.124.68"
+        var mqtt_port = 9001
+        var mqtt_topic_subscribe = "smartlights/#"
+        var mqtt_client_id = "GUI"
     </script>
     <script src="script.js" type="text/javascript"></script>
 </head>
@@ -17,5 +22,6 @@
     <div id="unique_id">The smartlights project.</div>
     <div class="common_class"></div>
     <div class="common_class"></div>
+    <div id="mqtt_message_target">New MQTT messages will appear here...</div>
 </body>
 </html>
