paho-mqtt lib added.

--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -17,6 +17,7 @@
         var mqtt_client_id = "GUI"
     </script>
     <script src="script.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 </head>
 <body onload="onBodyLoad()">
     <div id="unique_id">The smartlights project.</div>
