js mqtt username/passwd added.

--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -13,6 +13,8 @@
         var mqtt_reconnect_timeout = 2000
         var mqtt_broker = "147.228.124.68"
         var mqtt_port = 9001
+        var mqtt_username = "vbrenik"
+        var mqtt_passwd = "makamnaprj"
         var mqtt_topic_subscribe = "smartlights/#"
         var mqtt_client_id = "GUI"
     </script>
