--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 </head>
 <body onload="onBodyLoad()">
-    <div id="unique_id">The smartlights project.</div>
+    <div id="unique_id">The smartlights project - Vojtěch Breník.</div>
     <div class="common_class"></div>
     <div class="common_class"></div>
     <div id="mqtt_message_target">New MQTT messages will appear here...</div>
