MQTT-subscribe from GUI: bug fixed.

--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -16,7 +16,7 @@
         var mqtt_username = "vbrenik"
         var mqtt_passwd = "makamnaprj"
         var mqtt_topic_subscribe = "smartlights/#"
-        var mqtt_client_id = "GUI"
+        var mqtt_client_id = "GUI_"+Date.now()
     </script>
     <script src="script.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
