--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -27,6 +27,7 @@
     <div class="common_class"></div>
     <div class="common_class"></div>
     <div id="mqtt_message_target">New MQTT messages will appear here...</div>
-    <div id="button-container"></div>
+    <div id="button_container"></div>
+    <div id="footer"><button onclick="debugMode()">Debug</button></div>
 </body>
 </html>
