--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -9,7 +9,9 @@
 
     <!-- Scripts -->
     <script type="text/javascript">
-        var mqtt_client
+
+        // MQTT
+        var mqtt_client = NaN
         var mqtt_reconnect_timeout = 2000
         var mqtt_broker = "147.228.124.68"
         var mqtt_port = 9001
@@ -18,9 +20,16 @@
         var mqtt_topic_subscribe = "smartlights/#"
         var mqtt_topic_cmd = "smartlights/ESP0/cmd"
         var mqtt_client_id = "GUI_"+Date.now()
+
+        // Speechcloud
+        var sc_model_uri = "https://cak.zcu.cz:9443/v1/speechcloud/edu/prj/vbrenik"
+        var speech_cloud = NaN
+        var session_id = NaN
     </script>
     <script src="script.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+    <script src="https://cak.zcu.cz:9444/speechcloud.js"></script>
+    <script src="script_sc.js"></script>
 </head>
 <body onload="onBodyLoad()">
     <div id="unique_id">The smartlights project - Vojtěch Breník.</div>
