--- a/egs/smartlights/frontend/index.html
+++ b/egs/smartlights/frontend/index.html
@@ -11,32 +11,40 @@
     <script type="text/javascript">
 
         // MQTT
-        var mqtt_client = NaN
-        var mqtt_reconnect_timeout = 2000
-        var mqtt_broker = "147.228.124.68"
-        var mqtt_port = 9001
-        var mqtt_username = "vbrenik"
-        var mqtt_passwd = "makamnaprj"
-        var mqtt_topic_subscribe = "smartlights/#"
-        var mqtt_topic_cmd = "smartlights/ESP0/cmd"
-        var mqtt_client_id = "GUI_"+Date.now()
+        let mqtt_client = null
+        let mqtt_reconnect_timeout = 2000
+        let mqtt_broker = "147.228.124.68"
+        let mqtt_port = 9001
+        let mqtt_username = "vbrenik"
+        let mqtt_passwd = "makamnaprj"
+        let mqtt_topic_subscribe = "smartlights/#"
+        let mqtt_topic_cmd = "smartlights/ESP0/cmd"
+        let mqtt_client_id = "GUI_"+Date.now()
 
         // Speechcloud
-        var sc_model_uri = "https://cak.zcu.cz:9443/v1/speechcloud/edu/prj/vbrenik"
-        var speech_cloud = NaN
-        var session_id = NaN
+        let SC_URI = "https://cak.zcu.cz:9443/v1/speechcloud/edu/prj/vbrenik"
+        let speechcloud = null
+        let session_id = null
+        let recognizing = false
     </script>
     <script src="script.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cak.zcu.cz:9444/speechcloud.js"></script>
     <script src="script_sc.js"></script>
 </head>
 <body onload="onBodyLoad()">
-    <div id="unique_id">The smartlights project - VojtÄ›ch BrenÃ­k.</div>
+    <div id="unique_id">The smartlights project - Vojtìch Breník.</div>
     <div class="common_class"></div>
     <div class="common_class"></div>
     <div id="mqtt_message_target">New MQTT messages will appear here...</div>
     <div id="button_container"></div>
+
+    <!-- ASR/TTS elements -->
+    <button id="button_asr" onclick="asr_start_stop()">Recognizer start/stop</button>
+    <button id="button_tts" onclick="tts_say_hello()">Say hello</button>
+    <audio id="audio_out"></audio>
+
     <div id="footer"><button onclick="debugMode()">Debug</button></div>
 </body>
 </html>
