added elements to debug class

--- a/egs/smartlights/static/index.html
+++ b/egs/smartlights/static/index.html
@@ -37,8 +37,8 @@
     <div class="common_class"></div>
     <div class="common_class"></div>
     <div id="button_container"></div>
-    <div id="mqtt_message_target">New MQTT messages will appear here...</div>
-    <div id="voice_subs"><input type="text" id="pokus"><button onclick="parseStatement(document.getElementById('pokus').value)">Akce</button></div>
+    <div id="mqtt_message_target" class="dbg">New MQTT messages will appear here...</div>
+    <div id="voice_subs"><input type="text" id="pokus" class="dbg"><button onclick="parseStatement(document.getElementById('pokus').value)">Akce</button></div>
     <audio id="audioout"></audio>
     <div id="footer"><button id="debug" onclick="debugMode()">Debug</button>Vojtěch Breník, PUIA4, 2021</div>
 </body>
