added SC buttons

--- a/egs/smartlights/static/index.html
+++ b/egs/smartlights/static/index.html
@@ -22,6 +22,10 @@
         let mqtt_client_id = "GUI_"+Date.now()
         let states = {"WHITE": 1, "RED": 1, "GREEN": 1};
 
+        let mic = "<svg style=\"width:3vw;height:3vw\" viewBox=\"0 0 24 24\"><path fill=\"currentColor\" d=\"M12,2A3,3 0 0,1 15,5V11A3,3 0 0,1 12,14A3,3 0 0,1 9,11V5A3,3 0 0,1 12,2M19,11C19,14.53 16.39,17.44 13,17.93V21H11V17.93C7.61,17.44 5,14.53 5,11H7A5,5 0 0,0 12,16A5,5 0 0,0 17,11H19Z\" /></svg>"
+        let mic_off = "<svg style=\"width:3vw;height:3vw\" viewBox=\"0 0 24 24\"><path fill=\"currentColor\" d=\"M19,11C19,12.19 18.66,13.3 18.1,14.28L16.87,13.05C17.14,12.43 17.3,11.74 17.3,11H19M15,11.16L9,5.18V5A3,3 0 0,1 12,2A3,3 0 0,1 15,5V11L15,11.16M4.27,3L21,19.73L19.73,21L15.54,16.81C14.77,17.27 13.91,17.58 13,17.72V21H11V17.72C7.72,17.23 5,14.41 5,11H6.7C6.7,14 9.24,16.1 12,16.1C12.81,16.1 13.6,15.91 14.31,15.58L12.65,13.92L12,14A3,3 0 0,1 9,11V10.28L3,4.27L4.27,3Z\" /></svg>"
+        let tts_ico = "<svg style=\"width:3vw;height:3vw\" viewBox=\"0 0 24 24\"><path fill=\"currentColor\" d=\"M17,11H15V9H17M13,11H11V9H13M9,11H7V9H9M20,2H4A2,2 0 0,0 2,4V22L6,18H20A2,2 0 0,0 22,16V4C22,2.89 21.1,2 20,2Z\" />svg>"
+
         // Speechcloud
         //let SC_URI = "https://cak.zcu.cz:9443/v1/speechcloud/edu/prj/vbrenik"
         let SPEECHCLOUD_URI = "https://"+window.location.host.replace("444", "443")+"/v1/speechcloud/"
@@ -40,15 +44,17 @@
     <div id="unique_id">The smartlights project</div>
     <div class="common_class"></div>
     <div class="common_class"></div>
-    <div id="button_container"></div>
+    <div id="button_container" class="button_container"></div>
     <div id="mqtt_message_target" class="dbg">New MQTT messages will appear here...</div>
     <div id="voice_subs"><input type="text" id="pokus" class="dbg"><button class="dbg" onclick="parseStatement(document.getElementById('pokus').value)">Akce</button></div>
     
     <!-- ASR/TTS elements -->
-    <button id="button_asr" onclick="asr_start_stop()">Recognizer start/stop</button>
-    <button id="button_tts" onclick="tts_say_hello()">Say hello</button>
-    <audio id="audio_out"></audio>
+    <div class="button_container">
+        <button id="button_asr" onclick="asr_start_stop()" class="SC_button">Recognizer start/stop</button>
+        <button id="button_tts" onclick="tts_say_hello()" class="SC_button">Say hello</button>
+        <audio id="audio_out"></audio>
+    </div>
 
-    <div id="footer"><button id="debug" onclick="debugMode()">Debug</button>Vojtěch Breník, PUIA4, 2021</div>
+    <div id="footer"><button id="debug" onclick="debugMode()">Debug</button> Vojtěch Breník, PUIA4, 2021</div>
 </body>
 </html>
