--- a/egs/smartlights/static/index.html
+++ b/egs/smartlights/static/index.html
@@ -3,6 +3,8 @@
     <title>
         Smartlights
     </title>
+    
+    <meta charset="UTF-8">
 
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" type="text/css" >
